<resources>
    <string name="app_name">GetMeBack!</string>

    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>

    <!-- Strings for Auth -->

    <string name="facebook_app_id" translatable="false">1481277308721028</string> <string name="fb_login_protocol_scheme" translatable="false">fb1481277308721028</string>
    <string name="sign_in" translatable="false">Sign in</string>


    <!-- Strings for profile Fragment -->

    <string name="profile_edit">Edit</string>
    <string name="profile_logout" translatable="false">Log Out</string>
    <string name="profile_email" translatable="false">Email</string>
    <string name="profile_display_name">Displayed Name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_city">City</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_update">Update</string>
    <string name="profile_birthday_edit_hint">Click to pick a date</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_not_specified">Not specified</string>
    <string name="profile_gender_hint">Click to pick a gender</string>
    <string name="CalendarTag">Birthday Calendar Picker</string>

    <string name="pick_gender" >Pick a gender</string>
    <string name="home_new_object">Add an object</string>
    <string name="object_description_hint">Add a description</string>
    <string name="object_description">Object\'s description</string>
    <string name="object_name_hint">Add the name of the object</string>
    <string name="object_name">Object\'s name</string>
    <string name="home_create_button">Create</string>
    <string name="home_create_missing_name">Must set a name!</string>
    <string name="home_create_toolbar_title">Create a new object</string>
    <string name="home_show_last_position_title">Last known position</string>
    <string name="home_show_last_position_description">Description</string>
    <string name="home_show_last_position_description_hint">Add a description about the location</string>
    <string name="home_edit">Edit</string>
    <string name="home_delete">Delete</string>
    <string name="home_all_locations">Show positions list</string>
    <string name="home_all_locations_title">Positions</string>
    <string name="home_all_locations_delete">Delete all</string>
    <string name="home_show_add">Update last known position</string>
    <string name="new_position_description">Description of the location</string>
    <string name="new_position_date">Date</string>
    <string name="new_position_latlon">Coordinates</string>
    <string name="new_position_gps">Use GPS</string>
    <string name="new_position_submit">Add a new position</string>
    <string name="new_position_description_hint">Add a description about the location</string>
    <string name="new_position_create">Update position</string>
    <string name="gps_not_enabled">GPS is not Enabled!</string>
    <string name="gps_turn_on">Do you want to turn on GPS?</string>
    <string name="gps_yes">Yes</string>
    <string name="gps_no">No</string>
    <string name="gps_cancel">Cancel</string>
    <string name="gps_permissions">These permissions are mandatory for the application. Please allow access.</string>
    <string name="gps_no_provider">No Service Provider is available</string>
    <string name="gps_cant_be_used">To use this functionality you need to allow the app to use the GPS!</string>
    <string name="gps_not_available">GPS seems that is not available. Try again.</string>
    <string name="camera_no_back_camera">This device does not have a back camera so it has automatically reverted to the front camera</string>
    <string name="camera_no_camera">This device does not have any cameras.</string>
    <string name="gallery_error">Something went wrong. Please try again.</string>
    <string name="gallery_no_selection">You haven\'t picked Image</string>
    <string name="home_update_object">Edit</string>
    <string name="home_edit_object">Edit of object</string>
    <string name="title_found">Found Objects</string>
    <string name="founds_yours">Your\'s founds list</string>
    <string name="founds_others">Other\'s founds list</string>
    <string name="found_new_found">Add a new insertion</string>
    <string name="found_lost_list_generic">Insertions\' list</string>
    <string name="found_lost_your_list">Show Your insertions</string>
    <string name="found_lost_others_list">Show Others\' insertions</string>
    <string name="new_insertion">New insertion</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address">Address</string>
    <string name="home_create_position_missing_description">You must set a description!</string>
    <string name="new_insertion_missing_data">You must set both the name and the description.</string>
    <string name="user_profile">User profile</string>
    <string name="found_set_boolean">Set it as \"found\"</string>
    <string name="show_insertion">Showing insertion</string>
    <string name="profile_phone">Telephone</string>
    <string name="show_profile">Show user profile</string>
    <string name="insertion_status">Status</string>
    <string name="insertion_found">Found</string>
    <string name="insertion_not_found">Not found</string>
    <string name="choose_email_client">Choose an email client</string>
    <string name="email_found_subject">Declare as \"found\"</string>
    <string name="email_found_message">Hi! I think this is the item i lost. Can we meet it?</string>
    <string name="profile_telephone_hint">Your telephone number</string>
    <string name="profile_city_hint">Your city</string>
    <string name="mailer_not_found">It seems you don\'t have any app to view emails.</string>
    <string name="show_policy">Show policy and rules</string>
    <string name="delete_local_files">Delete all local files</string>
    <string name="policy" translatable="false">The Lost and Found Policy and procedures are intended to ensure that items reported lost or found on Southeastern Louisiana University’s campus and its satellite sites are properly accounted for and, in the case of items found, returned to their rightful owner or disposed of by the University. “Lost property” means any unattended, abandoned, misplaced, or forgotten item including but not limited to equipment, cash, jewelry, phones, books, keys, documents, or personal identification papers (driver’s license, credit cards, etc.) which are found within the boundaries of the University, pending the identification of the rightful owner or appropriate disposal thereof.</string>
    <string name="title_lost">Lost Objects</string>
    <string name="email_lost_message" >Hi! I think i have found the object you lost. Can we meet?</string>
</resources>
