<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_lost"
        android:name="com.marco_cavalli.lost_and_found.ui.losts_objects.LostsFragment"
        android:label="@string/title_lost"
        tools:layout="@layout/fragment_lost" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.marco_cavalli.lost_and_found.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_found"
        android:name="com.marco_cavalli.lost_and_found.ui.founds_objects.FoundsFragment"
        android:label="@string/title_found"
        tools:layout="@layout/fragment_found" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.marco_cavalli.lost_and_found.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>