<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="48dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="?attr/actionBarSize">

            <ImageView
                android:id="@+id/home_create_image"
                android:layout_width="286dp"
                android:layout_height="222dp"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="22dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_baseline_insert_photo_128"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/home_create_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="152dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_baseline_camera_alt_48"
                app:layout_constraintBottom_toTopOf="@+id/home_create_image"
                app:layout_constraintEnd_toStartOf="@+id/home_create_gallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/home_create_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="152dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_baseline_photo_library_48"
                app:layout_constraintBottom_toTopOf="@+id/home_create_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/home_create_camera"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="290dp"
                android:layout_height="151dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="1dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_create_image">

                <TextView
                    android:id="@+id/home_create_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/object_name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/home_create_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/object_name_hint"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/home_create_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/object_description"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/home_create_description_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/object_description_hint"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/home_create_button"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_marginStart="162dp"
                android:layout_marginTop="61dp"
                android:layout_marginEnd="161dp"
                android:layout_marginBottom="162dp"
                android:text="@string/home_create_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>